test/corpus/tonel.txt
================================================================================
Instance Method Tonel File
================================================================================
Class {
    #name : #MyClass,
    #superclass : #Object,
    #category : 'MyCategory',
    #package : 'MyPackage'
}

{ #category : #accessing }
MyClass >> foo [
    ^ 1
]
--------------------------------------------------------------------------------
(source
  (source_file
    (class_definition
      (type)
      (class_header
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (string))
        (class_header_pair
          (ston_key)
          (string))))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            (ston_key)
            (symbol))))
      (method_header
        (identifier)
        (unary_selector
          (unary_identifier)))
      (method_body
        (statement
          (return
            (number)))))))

================================================================================
Instance Method Tonel File
================================================================================
Class {
	#name : #ObjCSpecParserTest,
	#superclass : #TestCase,
	#instVars : [
		'parser'
	],
	#category : #Objective-C-Tests
}
--------------------------------------------------------------------------------
(source
  (source_file
    (class_definition
      (type)
      (class_header
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (ston_array
            (ston_value
              (string))))
        (class_header_pair
          (ston_key)
          (dashed_symbol))))))
================================================================================
Instance Method Tonel File with symbol method meta
================================================================================
Class {
    #name : #MyClass,
    #superclass : #Object,
    #category : 'MyCategory',
    #package : 'MyPackage'
}

{ #category : #'not accessing' }
MyClass >> foo [
    ^ 1
]
--------------------------------------------------------------------------------
(source
  (source_file
    (class_definition
      (type)
      (class_header
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (string))
        (class_header_pair
          (ston_key)
          (string))))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            (ston_key)
            (symbol
              (string)))))
      (method_header
        (identifier)
        (unary_selector
          (unary_identifier)))
      (method_body
        (statement
          (return
            (number)))))))
================================================================================
Class Method Tonel File
================================================================================
Class {
    #name : #MyClass,
    #superclass : #Object,
    #category : 'MyCategory',
    #package : 'MyPackage'
}

{ #category : #accessing }
MyClass class >> bar [
    ^ 2
]
--------------------------------------------------------------------------------
(source
  (source_file
    (class_definition
      (type)
      (class_header
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (string))
        (class_header_pair
          (ston_key)
          (string))))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            (ston_key)
            (symbol))))
      (method_header
        (identifier)
        (class_keyword)
        (unary_selector
          (unary_identifier)))
      (method_body
        (statement
          (return
            (number)))))))

================================================================================
Empty body
================================================================================
Class {
    #name : #MyClass,
    #superclass : #Object,
    #category : 'MyCategory',
    #package : 'MyPackage'
}

{ #category : #accessing }
MyClass >> foo [
]
--------------------------------------------------------------------------------
(source
  (source_file
    (class_definition
      (type)
      (class_header
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (string))
        (class_header_pair
          (ston_key)
          (string))))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            (ston_key)
            (symbol))))
      (method_header
        (identifier)
        (unary_selector
          (unary_identifier))))))

================================================================================
Pragma only body
================================================================================
Class {
    #name : #MyClass,
    #superclass : #Object,
    #category : 'MyCategory',
    #package : 'MyPackage'
}

{ #category : #accessing }
MyClass >> primitiveFoo [
    <primitive: 'foo'>
]
--------------------------------------------------------------------------------
(source
  (source_file
    (class_definition
      (type)
      (class_header
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (string))
        (class_header_pair
          (ston_key)
          (string))))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            (ston_key)
            (symbol))))
      (method_header
        (identifier)
        (unary_selector
          (unary_identifier)))
      (method_body
        (pragma
          (pragma_keyword_selector
            (keyword)
            (string)))))))

================================================================================
Temps only body
================================================================================
Class {
    #name : #MyClass,
    #superclass : #Object,
    #category : 'MyCategory',
    #package : 'MyPackage'
}

{ #category : #accessing }
MyClass >> foo [
    | this that |
]
--------------------------------------------------------------------------------
(source
  (source_file
    (class_definition
      (type)
      (class_header
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (symbol))
        (class_header_pair
          (ston_key)
          (string))
        (class_header_pair
          (ston_key)
          (string))))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            (ston_key)
            (symbol))))
      (method_header
        (identifier)
        (unary_selector
          (unary_identifier)))
      (method_body
        (temporaries
          (identifier)
          (identifier))))))

================================================================================
Package file
================================================================================
Package { #name : #'GeoSphere-Model' }
--------------------------------------------------------------------------------
(source
  (package_file
    (package_definition
      (package_data
        (ston_key)
        (symbol
          (string))))))

================================================================================
Package file dashed symbol
================================================================================
Package { #name : #ObjectiveC-Tests }
--------------------------------------------------------------------------------
(source
  (package_file
    (package_definition
      (package_data
        (ston_key)
        (dashed_symbol)))))

================================================================================
Real example #1 - ZTimestampPreciseSNTPClient
================================================================================
"
I am ZTimestampPreciseSNTPClient.
I am a ZTimestampSNTPClient.

I use DataAndTime with theoretical nanosecond precision.

I can be used to verify the current clock.

	ZTimestampPreciseSNTPClient new clockDifference.
	
	ZTimestampPreciseSNTPClient new
		enforceClockDifference: 2 seconds
		ifFail: [ :delta | 
			self inform: ('Clock difference {1} > 2s' format: { delta }) ];
		close. 
		
	ZTimestampPreciseSNTPClient logClockDifferenceLargerThan: 1 second.

Normally this difference should be just just fractions of a second. If not, make sure your computer's clock itself is properly synchronized.
"
Class {
	#name : #ZTimestampPreciseSNTPClient,
	#superclass : #ZTimestampSNTPClient,
	#category : #ZTimestamp
}

{ #category : #accessing }
ZTimestampPreciseSNTPClient >> now [
	^ DateAndTime now asUTC
]

{ #category : #accessing }
ZTimestampPreciseSNTPClient >> ntpEpoch [
	^ DateAndTime year: 1900 month: 1 day: 1 hour: 0 minute: 0 second: 0 offset: Duration zero
]

{ #category : #private }
ZTimestampPreciseSNTPClient >> timestampFromSeconds: seconds fraction: fraction [
	^ self ntpEpoch + seconds seconds + (fraction * (10 raisedToInteger: 9)) nanoSeconds 
]
--------------------------------------------------------------------------------
(source
  (source_file
        (comment)
        (class_definition
          (type)
          (class_header
            (class_header_pair
              (ston_key)
              (symbol))
            (class_header_pair
              (ston_key)
              (symbol))
            (class_header_pair
              (ston_key)
              (symbol))))
        (method_definition
          (method_metadata
            (method_metadata_object
              (method_metadata_pair
                (ston_key)
                (symbol))))
          (method_header
            (identifier)
            (unary_selector
              (unary_identifier)))
          (method_body
            (statement
              (return
                (unary_message
                  (unary_message
                    (identifier)
                    (unary_identifier))
                  (unary_identifier))))))
        (method_definition
          (method_metadata
            (method_metadata_object
              (method_metadata_pair
                (ston_key)
                (symbol))))
          (method_header
            (identifier)
            (unary_selector
              (unary_identifier)))
          (method_body
            (statement
              (return
                (keyword_message
                  (identifier)
                  (keyword)
                  (number)
                  (keyword)
                  (number)
                  (keyword)
                  (number)
                  (keyword)
                  (number)
                  (keyword)
                  (number)
                  (keyword)
                  (number)
                  (keyword)
                  (unary_message
                    (identifier)
                    (unary_identifier)))))))
        (method_definition
          (method_metadata
            (method_metadata_object
              (method_metadata_pair
                (ston_key)
                (symbol))))
          (method_header
            (identifier)
            (keyword_selector
              (keyword)
              (identifier)
              (keyword)
              (identifier)))
          (method_body
            (statement
              (return
                (binary_message
                  (binary_message
                    (unary_message
                      (self)
                      (unary_identifier))
                    (binary_operator)
                    (unary_message
                      (identifier)
                      (unary_identifier)))
                  (binary_operator)
                  (unary_message
                    (parenthesized_expression
                      (binary_message
                        (identifier)
                        (binary_operator)
                        (parenthesized_expression
                          (keyword_message
                            (number)
                            (keyword)
                            (number)))))
                    (unary_identifier)))))))))

================================================================================
Real example #2 - DruidCogit
================================================================================
Class {
	#name : 'DruidCogit',
	#superclass : 'Cogit',
	#category : 'Druid-Tests',
	#package : 'Druid-Tests'
}

{ #category : 'configuration' }
DruidCogit class >> initializeBytecodeTableForSistaV1 [
	
	"Do nothing for now"
]

{ #category : 'configuration' }
DruidCogit class >> initializePrimitiveTable [
	
	"Do nothing for now"
]

{ #category : 'simulation only' }
DruidCogit >> bytecodeFixupClass [
	<doNotGenerate>
	^CogBytecodeFixup
]

{ #category : 'garbage' }
DruidCogit >> entryOffset: anInteger [ 
	
	"Nothing"
]

{ #category : 'garbage' }
DruidCogit >> forCogit: aDruidCogit methodZone: aCogMethodZone [ 
	
	^ objectMemory 
]

{ #category : 'generated' }
DruidCogit >> genPrimitiveAdd [

	| currentBlock jump0 jump1 jump2 |
	self TstCq: 1 R: Arg0Reg.
	jump0 := self JumpZero: 0.
	self TstCq: 1 R: ReceiverResultReg.
	jump1 := self JumpZero: 0.
	self MoveR: Arg0Reg R: Extra1Reg.
	self SubCq: 1 R: Extra1Reg.
	self MoveR: Extra1Reg R: Extra2Reg.
	self AddR: ReceiverResultReg R: Extra2Reg.
	jump2 := self JumpOverflow: 0.
	self MoveR: Extra2Reg R: ReceiverResultReg.
	self RetN: 2 * objectMemory wordSize.
	currentBlock := self Label.
	jump0 jmpTarget: currentBlock.
	jump1 jmpTarget: currentBlock.
	jump2 jmpTarget: currentBlock.
	^ CompletePrimitive
]

{ #category : 'generated' }
DruidCogit >> genPrimitiveEqual [

	| currentBlock jump0 jump1 jump2 jump3 jump4 |
	self MoveR: ReceiverResultReg R: TempReg.
	self MoveR: TempReg R: ClassReg.
	self AndR: Arg0Reg R: ClassReg.
	self TstCq: 1 R: ClassReg.
	self MoveR: Arg0Reg R: Extra3Reg.
	self MoveR: ReceiverResultReg R: Extra4Reg.
	jump0 := self JumpZero: 0.
	self CmpR: Arg0Reg R: TempReg.
	jump1 := self JumpZero: 0.
	jump2 := self JumpNonZero: 0.
	currentBlock := self Label.
	jump0 jmpTarget: currentBlock.
	self MoveR: Extra3Reg R: Arg0Reg.
	self MoveR: Extra4Reg R: ReceiverResultReg.
	jump3 := self Jump: 0.
	currentBlock := self Label.
	jump1 jmpTarget: currentBlock.
	self MoveCw: objectMemory trueObject R: ClassReg.
	self MoveR: ClassReg R: TempReg.
	jump4 := self Jump: 0.
	currentBlock := self Label.
	jump2 jmpTarget: currentBlock.
	self MoveCw: objectMemory falseObject R: SendNumArgsReg.
	self MoveR: SendNumArgsReg R: TempReg.
	currentBlock := self Label.
	jump4 jmpTarget: currentBlock.
	self MoveR: TempReg R: ReceiverResultReg.
	self RetN: 2 * objectMemory wordSize.
	currentBlock := self Label.
	jump3 jmpTarget: currentBlock.
	^ CompletePrimitive
]

{ #category : 'generated' }
DruidCogit >> genPrimitiveGreaterOrEqual [

	| currentBlock jump0 jump1 jump2 jump3 jump4 |
	self MoveR: ReceiverResultReg R: TempReg.
	self MoveR: TempReg R: ClassReg.
	self AndR: Arg0Reg R: ClassReg.
	self TstCq: 1 R: ClassReg.
	self MoveR: Arg0Reg R: Extra3Reg.
	self MoveR: ReceiverResultReg R: Extra4Reg.
	jump0 := self JumpZero: 0.
	self CmpR: Arg0Reg R: TempReg.
	jump1 := self JumpGreaterOrEqual: 0.
	jump2 := self JumpLess: 0.
	currentBlock := self Label.
	jump0 jmpTarget: currentBlock.
	self MoveR: Extra3Reg R: Arg0Reg.
	self MoveR: Extra4Reg R: ReceiverResultReg.
	jump3 := self Jump: 0.
	currentBlock := self Label.
	jump1 jmpTarget: currentBlock.
	self MoveCw: objectMemory trueObject R: ClassReg.
	self MoveR: ClassReg R: TempReg.
	jump4 := self Jump: 0.
	currentBlock := self Label.
	jump2 jmpTarget: currentBlock.
	self MoveCw: objectMemory falseObject R: Extra0Reg.
	self MoveR: Extra0Reg R: TempReg.
	currentBlock := self Label.
	jump4 jmpTarget: currentBlock.
	self MoveR: TempReg R: ReceiverResultReg.
	self RetN: 2 * objectMemory wordSize.
	currentBlock := self Label.
	jump3 jmpTarget: currentBlock.
	^ CompletePrimitive
]

{ #category : 'generated' }
DruidCogit >> genPrimitiveGreaterThan [

	| currentBlock jump0 jump1 jump2 jump3 jump4 |
	self MoveR: ReceiverResultReg R: TempReg.
	self MoveR: TempReg R: ClassReg.
	self AndR: Arg0Reg R: ClassReg.
	self TstCq: 1 R: ClassReg.
	self MoveR: Arg0Reg R: Extra3Reg.
	self MoveR: ReceiverResultReg R: Extra4Reg.
	jump0 := self JumpZero: 0.
	self CmpR: Arg0Reg R: TempReg.
	jump1 := self JumpGreater: 0.
	jump2 := self JumpLessOrEqual: 0.
	currentBlock := self Label.
	jump0 jmpTarget: currentBlock.
	self MoveR: Extra3Reg R: Arg0Reg.
	self MoveR: Extra4Reg R: ReceiverResultReg.
	jump3 := self Jump: 0.
	currentBlock := self Label.
	jump1 jmpTarget: currentBlock.
	self MoveCw: objectMemory trueObject R: ClassReg.
	self MoveR: ClassReg R: TempReg.
	jump4 := self Jump: 0.
	currentBlock := self Label.
	jump2 jmpTarget: currentBlock.
	self MoveCw: objectMemory falseObject R: SendNumArgsReg.
	self MoveR: SendNumArgsReg R: TempReg.
	currentBlock := self Label.
	jump4 jmpTarget: currentBlock.
	self MoveR: TempReg R: ReceiverResultReg.
	self RetN: 2 * objectMemory wordSize.
	currentBlock := self Label.
	jump3 jmpTarget: currentBlock.
	^ CompletePrimitive
]

{ #category : 'generated' }
DruidCogit >> genPrimitiveLessOrEqual [

	| currentBlock jump0 jump1 jump2 jump3 jump4 |
	self MoveR: ReceiverResultReg R: TempReg.
	self MoveR: TempReg R: ClassReg.
	self AndR: Arg0Reg R: ClassReg.
	self TstCq: 1 R: ClassReg.
	self MoveR: Arg0Reg R: Extra3Reg.
	self MoveR: ReceiverResultReg R: Extra4Reg.
	jump0 := self JumpZero: 0.
	self CmpR: Arg0Reg R: TempReg.
	jump1 := self JumpLessOrEqual: 0.
	jump2 := self JumpGreater: 0.
	currentBlock := self Label.
	jump0 jmpTarget: currentBlock.
	self MoveR: Extra3Reg R: Arg0Reg.
	self MoveR: Extra4Reg R: ReceiverResultReg.
	jump3 := self Jump: 0.
	currentBlock := self Label.
	jump1 jmpTarget: currentBlock.
	self MoveCw: objectMemory trueObject R: ClassReg.
	self MoveR: ClassReg R: TempReg.
	jump4 := self Jump: 0.
	currentBlock := self Label.
	jump2 jmpTarget: currentBlock.
	self MoveCw: objectMemory falseObject R: Extra0Reg.
	self MoveR: Extra0Reg R: TempReg.
	currentBlock := self Label.
	jump4 jmpTarget: currentBlock.
	self MoveR: TempReg R: ReceiverResultReg.
	self RetN: 2 * objectMemory wordSize.
	currentBlock := self Label.
	jump3 jmpTarget: currentBlock.
	^ CompletePrimitive
]

{ #category : 'generated' }
DruidCogit >> genPrimitiveLessThan [

	| currentBlock jump0 jump1 jump2 jump3 jump4 |
	self MoveR: ReceiverResultReg R: TempReg.
	self MoveR: TempReg R: ClassReg.
	self AndR: Arg0Reg R: ClassReg.
	self TstCq: 1 R: ClassReg.
	self MoveR: Arg0Reg R: Extra3Reg.
	self MoveR: ReceiverResultReg R: Extra4Reg.
	jump0 := self JumpZero: 0.
	self CmpR: Arg0Reg R: TempReg.
	jump1 := self JumpLess: 0.
	jump2 := self JumpGreaterOrEqual: 0.
	currentBlock := self Label.
	jump0 jmpTarget: currentBlock.
	self MoveR: Extra3Reg R: Arg0Reg.
	self MoveR: Extra4Reg R: ReceiverResultReg.
	jump3 := self Jump: 0.
	currentBlock := self Label.
	jump1 jmpTarget: currentBlock.
	self MoveCw: objectMemory trueObject R: ClassReg.
	self MoveR: ClassReg R: TempReg.
	jump4 := self Jump: 0.
	currentBlock := self Label.
	jump2 jmpTarget: currentBlock.
	self MoveCw: objectMemory falseObject R: SendNumArgsReg.
	self MoveR: SendNumArgsReg R: TempReg.
	currentBlock := self Label.
	jump4 jmpTarget: currentBlock.
	self MoveR: TempReg R: ReceiverResultReg.
	self RetN: 2 * objectMemory wordSize.
	currentBlock := self Label.
	jump3 jmpTarget: currentBlock.
	^ CompletePrimitive
]

{ #category : 'generated' }
DruidCogit >> genPrimitiveSubtract [

	| currentBlock jump0 jump1 jump2 jump3 jump4 jump5 jump6 |
	self MoveR: ReceiverResultReg R: TempReg.
	self MoveR: Arg0Reg R: ClassReg.
	self TstCq: 1 R: TempReg.
	self MoveR: Arg0Reg R: Extra3Reg.
	self MoveR: ReceiverResultReg R: Extra4Reg.
	jump0 := self JumpZero: 0.
	self TstCq: 1 R: ClassReg.
	self MoveR: Arg0Reg R: Extra2Reg.
	self MoveR: ReceiverResultReg R: Extra4Reg.
	jump1 := self JumpZero: 0.
	currentBlock := self Label.
	jump0 jmpTarget: currentBlock.
	self MoveR: Extra3Reg R: Arg0Reg.
	self MoveR: Extra4Reg R: ReceiverResultReg.
	jump2 := self Jump: 0.
	self MoveR: TempReg R: SendNumArgsReg.
	self SubR: ClassReg R: SendNumArgsReg.
	self MoveR: SendNumArgsReg R: Extra0Reg.
	self AddCq: 1 R: Extra0Reg.
	self MoveR: Arg0Reg R: Extra3Reg.
	self MoveR: ReceiverResultReg R: TempReg.
	jump3 := self JumpOverflow: 0.
	jump4 := self JumpNoOverflow: 0.
	currentBlock := self Label.
	jump1 jmpTarget: currentBlock.
	self MoveR: Extra2Reg R: Arg0Reg.
	self MoveR: Extra4Reg R: ReceiverResultReg.
	jump5 := self Jump: 0.
	currentBlock := self Label.
	jump3 jmpTarget: currentBlock.
	self MoveR: Extra3Reg R: Arg0Reg.
	self MoveR: TempReg R: ReceiverResultReg.
	jump6 := self Jump: 0.
	currentBlock := self Label.
	jump4 jmpTarget: currentBlock.
	self MoveR: Extra0Reg R: ReceiverResultReg.
	self RetN: 2 * objectMemory wordSize.
	currentBlock := self Label.
	jump2 jmpTarget: currentBlock.
	jump5 jmpTarget: currentBlock.
	jump6 jmpTarget: currentBlock.
	^ CompletePrimitive
]

{ #category : 'garbage' }
DruidCogit >> minCallAddress: anInteger [ 
	
	"Nothing"
]

{ #category : 'accessing' }
DruidCogit >> objectRepresentationClass [

	^ self
]
--------------------------------------------------------------------------------
(source
  (source_file
    (class_definition
      (type)
      (class_header
        (class_header_pair
          key: (ston_key)
          name: (string))
        (class_header_pair
          key: (ston_key)
          superclass: (string))
        (class_header_pair
          key: (ston_key)
          category: (string))
        (class_header_pair
          key: (ston_key)
          package: (string))))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            key: (ston_key)
            category: (string))))
      (method_header
        (identifier)
        (class_keyword)
        (unary_selector
          (unary_identifier)))
      (comment))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            key: (ston_key)
            category: (string))))
      (method_header
        (identifier)
        (class_keyword)
        (unary_selector
          (unary_identifier)))
      (comment))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            key: (ston_key)
            category: (string))))
      (method_header
        (identifier)
        (unary_selector
          (unary_identifier)))
      (method_body
        (pragma
          (pragma_unary_selector
            (unary_identifier)))
        (statement
          (return
            (identifier)))))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            key: (ston_key)
            category: (string))))
      (method_header
        (identifier)
        (keyword_selector
          (keyword)
          (identifier)))
      (comment))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            key: (ston_key)
            category: (string))))
      (method_header
        (identifier)
        (keyword_selector
          (keyword)
          (identifier)
          (keyword)
          (identifier)))
      (method_body
        (statement
          (return
            (identifier)))))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            key: (ston_key)
            category: (string))))
      (method_header
        (identifier)
        (unary_selector
          (unary_identifier)))
      (method_body
        (temporaries
          (identifier)
          (identifier)
          (identifier)
          (identifier))
        (statement
          (keyword_message
            receiver: (self)
            (keyword)
            (number)
            (keyword)
            (identifier)))
        (statement
          (assignment
            (identifier)
            (keyword_message
              receiver: (self)
              (keyword)
              (number))))
        (statement
          (keyword_message
            receiver: (self)
            (keyword)
            (number)
            (keyword)
            (identifier)))
        (statement
          (assignment
            (identifier)
            (keyword_message
              receiver: (self)
              (keyword)
              (number))))
        (statement
          (keyword_message
            receiver: (self)
            (keyword)
            (identifier)
            (keyword)
            (identifier)))
        (statement
          (keyword_message
            receiver: (self)
            (keyword)
            (number)
            (keyword)
            (identifier)))
        (statement
          (keyword_message
            receiver: (self)
            (keyword)
            (identifier)
            (keyword)
            (identifier)))
        (statement
          (keyword_message
            receiver: (self)
            (keyword)
            (identifier)
            (keyword)
            (identifier)))
        (statement
          (assignment
            (identifier)
            (keyword_message
              receiver: (self)
              (keyword)
              (number))))
        (statement
          (keyword_message
            receiver: (self)
            (keyword)
            (identifier)
            (keyword)
            (identifier)))
        (statement
          (keyword_message
            receiver: (self)
            (keyword)
            (binary_message
              receiver: (number)
              (binary_operator)
              (unary_message
                receiver: (identifier)
                (unary_identifier)))))
        (statement
          (assignment
            (identifier)
            (unary_message
              receiver: (self)
              (unary_identifier))))
        (statement
          (keyword_message
            receiver: (identifier)
            (keyword)
            (identifier)))
        (statement
          (keyword_message
            receiver: (identifier)
            (keyword)
            (identifier)))
        (statement
          (keyword_message
            receiver: (identifier)
            (keyword)
            (identifier)))
        (statement
          (return
            (identifier)))))
    (method_definition
      (method_metadata
        (method_metadata_object
          (method_metadata_pair
            key: (ston_key)
            category: (string))))
      (method_header
        (identifier)
        (unary_selector
          (unary_identifier)))
      (method_body
        (temporaries
          (identifier)
          (identifier)
          (identifier)
          (identifier)
          (identifier)
          (identifier))
        (statement
          (keyword_message
            receiver: (self)
            (keyword)
            (identifier)
            (keyword)
